# ProjectDjango

./: Dockerfile  README.MD  db.sqlite3  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
store_app/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
store_app/migrations/: 0001_initial.py
store_app/templates/store_app/: add_product.html  all_products.html  base.html  menu.html  product_detail.html
store_app/tests/: conftest.py  test_models.py  test_tasks.py
