[tool.poetry]
name = "projectdjango"
version = "0.1.0"
description = ""
authors = ["Den <otkrytka-m@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
redis = "^5.2.1"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-results = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
